# freelanceve

./: .gitignore  Anchor.toml  LICENSE  README.md  SECURITY.md  supabase-schema.sql
frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/ai/: route.ts
frontend/app/api/notify/: route.ts
frontend/app/api/translate/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/inbox/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/register/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: Footer.tsx  Navbar.tsx  OrderCard.tsx  ProfileCard.tsx  ServiceCard.tsx  USDCBadge.tsx  WalletProvider.tsx  about-section.tsx  experience-section.tsx  footer.tsx  hero-section.tsx  language-switcher.tsx  logo-marquee.tsx  navigation.tsx  scroll-reveal.tsx  services-section.tsx  starfall-canvas.tsx  testimonials-section.tsx  usdc-price.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/contexts/: language-context.tsx  session-context.tsx  theme-context.tsx
frontend/hooks/: useFreelancerProfile.ts  useOrders.ts  useServices.ts  useTranslate.ts
frontend/idl/: freelance_ve.json
frontend/lib/: anchor.ts  auth.ts  constants.ts  program.ts  supabase.ts  translations.ts  usdc.ts  utils.ts
programs/freelance-ve/: Cargo.toml
programs/freelance-ve/src/: lib.rs
tests/: freelance-ve.ts
(+14 files in other folders)
