[package]
name = "freelance-ve"
version = "0.1.0"
description = "FreelanceVE — Plataforma de freelancers venezolanos on-chain con pagos en USDC via Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "freelance_ve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
